# nanoboard

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  OPTIMIZATION_LOG.md  README.md  README_en.md  SYNC_AND_OPTIMIZATION_SUMMARY.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: build.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/: Info.plist  README.md
src-tauri/src/: clawhub.rs  cron.rs  logger.rs  main.rs  menu.rs  network.rs  process.rs  session.rs
src/components/: ConfirmDialog.tsx  EmptyState.tsx  ErrorBoundary.tsx  KeyboardShortcutsHelp.tsx  Layout.tsx  NetworkMonitor.js  NetworkMonitor.tsx  index.ts
src/components/common/: LoadingState.tsx
src/components/config/: ChannelEditModal.tsx  CodeEditorView.tsx  HistoryPanel.tsx  McpServerEditModal.tsx  ProviderEditModal.tsx  index.ts
src/components/config/sections/: ProviderSection.js  ProviderSection.tsx
src/components/dashboard/: ConfigOverviewCards.tsx  CronOverviewCards.tsx  McpServersCard.tsx  StatusCards.tsx  SystemInfoSection.tsx  SystemResourceCards.tsx  index.ts
src/components/logs/: LogFilters.tsx  LogItem.tsx  index.ts
src/components/skills/: SkillCard.tsx
src/components/workspace/: CronList.tsx  FileList.tsx
src/config/: channels.ts  index.ts  providers.ts  types.ts
src/contexts/: ThemeContext.tsx  ToastContext.tsx  index.ts
src/hooks/: index.ts  useKeyboardShortcuts.ts
src/i18n/: index.ts
src/i18n/locales/: en-US.json  zh-CN.json
src/lib/: defaultConfig.ts  tauri.ts
src/pages/: About.tsx  ConfigEditor.js  ConfigEditor.tsx  CronJobs.tsx  Dashboard.tsx  Dashboard_i18n.tsx  Logs.js  Logs.tsx  Memory.tsx  Sessions.tsx  Skills.tsx  SkillsMarket.js  SkillsMarket.tsx  Workspace.tsx
src/types/: clawhub.ts  dashboard.ts  index.ts
src/utils/: format.ts  index.ts
